--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>When to Clock Out?</title>
     <link rel="stylesheet" href="style.css">
     <script src="triggers.js" defer></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <main>
     <h1>What Time Should You Clock Out?</h1>
+    <p class="subtitle">The calculator for the 40-hour wage worker</p>
     <div class="flexBox">
         <div id="inputCommands" class="box">
             <div id="dayOfTheWeek"></div>
