Added some meta data

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>When to Clock Out?</title>
+    <title>What Time Should You Clock Out?</title>
+    <meta name="description" content="The calculator for the 40-hour wage worker">
     <link rel="stylesheet" href="style.css">
     <script src="triggers.js" defer></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
